GCA-19 unit testing - refactored lower case usernames generating